# zero2prod-rust

./: Cargo.toml  Dockerfile  README.md  configuration.yaml  spec.yaml  sqlx-data.json
.github/workflows/: general.yml
.sqlx/: query-77f811b6456f540bd454345b3261a3e8cf74e1f5deec33863ecbcc0806f93f87.json  query-b4ab8d7165747875f56d472a78dc1b8e808a0e9a43a30e312ba71f039078f017.json  query-b8b9c9b003e9621fe759417d8f9f16b9c8e5705efdef05dbb565cf2f7ab37745.json  query-f6582059cd25113ccd788716e8518dba884fd6e40b1a9b689c961a8214d2b67f.json
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20240128062011_make_status_not_null_in_subscriptions.sql  20240207001726_seed_user.sql
scripts/: init_db.sh  init_redis.sh  test.sh
src/: authentication.rs  configuration.rs  email_client.rs  main.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  password.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  mod.rs  newsletters.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
